# hydra-zen

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  README.md  ROADMAP.md  SPDX.spdx  pyproject.toml  pyrightconfig.json  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: build_docs.yml  nightly.yml  publish_docs.yml  pypi_publish.yml  test_docs.yml  tox_run.yml
brand/: README.md
constraints/: min_deps.txt  v1_pydantic.txt  v2_pydantic.txt
docs/: .buildinfo  README.md  api_reference.html  changes.html  experimental.html  explanation.html  genindex.html  how_tos.html  index.html  installation.html  objects.inv  overview.html  pytorch_lightning_example.html  requirements.txt  search.html  searchindex.js  store.html  structured_configs.html  tutorials.html
docs/_modules/: index.html
docs/_modules/hydra_zen/: _hydra_overloads.html  _launch.html  experimental.html
docs/_modules/hydra_zen/experimental/: _implementations.html
docs/_modules/hydra_zen/structured_configs/: _implementations.html  _just.html  _make_config.html  _type_guards.html  (+1 more)
docs/_sources/: api_reference.rst.txt  changes.rst.txt  how_tos.rst.txt  index.rst.txt  installation.rst.txt  pytorch_lightning_example.rst.txt  structured_configs.rst.txt  tutorials.rst.txt
docs/_sources/explanation/: dont_repeat_yourself.rst.txt  hydrated_dataclass.rst.txt  type_refinement.rst.txt
docs/_sources/how_to/: beartype.rst.txt  configure_hydra.rst.txt  configuring_experiments.rst.txt  pytorch_lightning.rst.txt  use_callbacks.rst.txt  using_scikit_learn.rst.txt
docs/_sources/tutorials/: add_cli.rst.txt  basic_app.rst.txt  config_groups.rst.txt  hierarchy.rst.txt  inject_wrapper.rst.txt  pytorch_lightning.rst.txt  using_scikit_learn.rst.txt
docs/_static/: copybutton.js  documentation_options.js  gtag.js  pygments.css  sphinx-codeautolink.css
docs/explanation/: dont_repeat_yourself.html  hydrated_dataclass.html  type_refinement.html
docs/how_to/: beartype.html  configure_hydra.html  configuring_experiments.html  partial_config.html  pydantic_guide.html  pytorch_lightning.html  use_callbacks.html  using_scikit_learn.html
docs/source/: api_reference.rst  changes.rst  conf.py  experimental.rst  explanation.rst  how_tos.rst  index.rst  installation.rst  overview.rst  pytorch_lightning_example.rst  store.rst  structured_configs.rst  tutorials.rst
docs/source/explanation/: dont_repeat_yourself.rst  hydrated_dataclass.rst  launch.rst  type_refinement.rst
docs/source/how_to/: beartype.rst  configure_hydra.rst  configuring_experiments.rst  partial_config.rst  pydantic_guide.rst  pytorch_lightning.rst  use_callbacks.rst  using_scikit_learn.rst
docs/source/tutorials/: add_cli.rst  basic_app.rst  config_groups.rst  hierarchy.rst  inject_wrapper.rst  pytorch_lightning.rst  using_scikit_learn.rst
docs/tutorials/: add_cli.html  basic_app.html  config_groups.html  hierarchy.html  inject_wrapper.html  pytorch_lightning.html  using_scikit_learn.html
project_tooling/: add_header.py  make_rst_table.py  test_headers.py
scratch/: recursive_just.ipynb
src/: Docs.ipynb
src/hydra_utils/: _hydra_overloads.py  _version.py  typing.py
src/hydra_utils/experimental/: __init__.py  _implementations.py
src/hydra_utils/structured_configs/: __init__.py  _implementations.py  _utils.py
src/hydra_zen/: __init__.py  _compatibility.py  _hydra_overloads.py  _launch.py  _like.py  _py314_compat.py  _version.py  _zen.py  errors.py  experimental.py  experimentatal.py  funcs.py  main.py  typing.py
src/hydra_zen/_utils/: coerce.py
src/hydra_zen/experimental/: __init__.py  _implementations.py  coerce.py  plugins.py  utils.py
src/hydra_zen/structured_configs/: __init__.py  _globals.py  _implementations.py  _just.py  _make_config.py  _make_custom_builds.py  _type_guards.py  _utils.py  _value_conversion.py
src/hydra_zen/typing/: __init__.py  _builds_overloads.py  _implementations.py
src/hydra_zen/wrapper/: __init__.py  _implementations.py  _main.py
tests/: __init__.py  conftest.py  custom_strategies.py  dummy_zen_main.py  pyright_utils.py  test_BuildsFn.py  test_against_jax.py  test_against_numpy.py  test_against_torch.py  test_config_value_validation.py  test_custom_strategies.py  test_dataclass_conversion.py  test_dataclass_semantics.py  test_defaults_list.py  test_docs_typecheck.py  test_docstrings.py  test_documented_examples.py  test_experimental.py  test_flat_target.py  test_hydra_behaviors.py  test_hydra_overloads.py  test_hydrated_dataclass.py  test_instantiate.py  test_just.py  test_kwargs_of.py  test_make_config.py  test_make_custom_builds_fn.py  test_manual_target.py  test_meta_fields.py  test_project.py  test_protocols.py  test_py310.py  test_py36.py  test_py39.py  test_pyright_utils.py  test_roundtrips.py  test_signature_parsing.py  test_staticmethod_support.py  test_store.py  test_utils.py  (+11 more)
tests/annotations/: behaviors.py  declarations.py  mypy_checks.py  pyright_check.py
tests/example_app/: change_hydra_config.py  config.yaml  dummy_zen_main.py  zen_main_w_config_path.py
tests/example_app/dir1/: __init__.py
tests/example_app/dir2/: __init__.py
tests/experimental/: test_callbacks.py  test_coerce_sequences.py  test_implementations.py  test_logging.py  test_plugins.py  test_utils.py  test_validation.py
tests/test_compatibility/: test_hydra_supports_partial.py  test_old_partial_implementation.py  test_omegaconf_830.py  test_primitive_support.py
tests/test_launch/: test_callbacks.py  test_dict_overrides.py  test_global_state_isolation.py  test_implementations.py  test_logging.py  test_merge_compat.py  test_validation.py
tests/test_third_party/: test_against_jax.py  test_against_numpy.py  test_against_pytorch_lightning.py  test_against_torch.py  test_type_validators.py  test_using_all_pydantic.py  test_using_beartype.py  test_using_pydantic.py  test_using_v1_pydantic.py  test_using_v2_pydantic.py
tests/test_utils/: test_sequence_coercion.py
tests/test_zen_processing/: test_inheritance.py  test_meta_fields.py  test_zen_wrappers.py
(+2 files in other folders)
